# bos-cli

./: Cargo.toml  guix.scm  manifest.scm  posterity  temp.sh
crates/dots/: Cargo.toml  README.md  README_2.md  README_backup.md
crates/dots/src/: handlers.rs  lib.rs  staging.rs  trackfile.rs
crates/main/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: bos.rs  fs.rs  lib.rs
src/: main.rs
